--- a/chrome/tacks/sideberryMods.css
+++ b/chrome/tacks/sideberryMods.css
@@ -1,73 +1,80 @@
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/autohide_sidebar.css made available under Mozilla Public License v. 2.0
-See the above repository for updates as well as full license text. */
-
-/* Show sidebar only when the cursor is over it  */
-/* The border controlling sidebar width will be removed so you'll need to modify these values to change width */
-
-#sidebar-box{
-  --uc-sidebar-width: 30px;
-  --uc-sidebar-hover-width: 260px;
-  --uc-autohide-sidebar-delay: 200ms; /* Wait 0.6s before hiding sidebar */
-  position: relative;
-  min-width: var(--uc-sidebar-width) !important;
-  width: var(--uc-sidebar-width) !important;
-  max-width: var(--uc-sidebar-width) !important;
-  z-index:1;
+/*  Sideberry Dynamic sidebar   */
+#sidebar-box {
+  overflow: hidden;
+  height: calc(100% - 30px);
+  position: fixed;
+  max-width: 30px;
+  display: block;
+  transition: 10oms;
+  z-index: 3;
 }
 
-#sidebar-box[positionend]{ direction: rtl }
-#sidebar-box[positionend] > *{ direction: ltr }
-
-#sidebar-box[positionend]:-moz-locale-dir(rtl){ direction: ltr }
-#sidebar-box[positionend]:-moz-locale-dir(rtl) > *{ direction: rtl }
-
-/*#main-window[sizemode="fullscreen"] #sidebar-box{ --uc-sidebar-width: 1px; }*/
-
-#sidebar-splitter{ display: none }
-
-#sidebar-header{ overflow: hidden; color: rgb(20,20,29), inherit) !important}
-
-#sidebar{
-  transition: min-width 115ms linear var(--uc-autohide-sidebar-delay) !important;
-  min-width: var(--uc-sidebar-width) !important;
-  will-change: min-width;
+#sidebar-box:hover {
+  max-width: 250px
+  ;
 }
 
-#sidebar-box:hover > #sidebar{ min-width: var(--uc-sidebar-hover-width) !important; transition-delay: 20ms !important }
-
-.sidebar-panel{
-  background-color: rgb(20,20,29) !important;
-  color: var(--newtab-text-primary-color) !important;
-}*/
-
-.sidebar-panel #search-box{
-  -moz-appearance: none !important;
-  background-color: rgb(20,20,29) !important;
-  color: inherit !important;
+#sidebar {
+  width: calc(30px * 10) !important;
+  max-width: 50vw !important;
+  height: 100%;
 }
 
-/* Add sidebar divider and give it background */
-
-#sidebar,
-#sidebar-header{
-  background-color: var(--toolbar-bgcolor) !important;
-  border-inline: 1px solid rgb(0,0,0);
-  border-inline-width: 0px 1px;
+#appcontent {
+  margin-left: 30px;
 }
 
-#sidebar-box:not([positionend]) > :-moz-locale-dir(rtl),
-#sidebar-box[positionend] > *{
-  border-inline-width: 1px 0px;
+/* Page Actions Hide and Show on Hover */
+
+/* Hide Buttons and Reveal on Hover */
+
+#page-action-buttons:not(:hover) .urlbar-page-action,
+#page-action-buttons:not(:hover) #star-button
+{
+  width: 0px !important;
+  min-width: 0px !important;
+  padding-left: 0px !important;
+  padding-right: 10px !important;
+  margin-right: -5px !important;
+  transition: all 250ms ease-in-out;
 }
 
-/* Move statuspanel to the other side when sidebar is hovered so it doesn't get covered by sidebar */
+#page-action-buttons:not(:hover) #userContext-indicator {
+  margin-right : 37px !important;
+  transition: all 250ms ease-in-out;
+}
 
-#sidebar-box:not([positionend]):hover ~ #appcontent #statuspanel{ inset-inline: auto 0px !important; }
-#sidebar-box:not([positionend]):hover ~ #appcontent #statuspanel-label{ margin-inline: 0px !important; border-left-style: solid !important; }
+#page-action-buttons:hover .urlbar-page-action,
+#page-action-buttons:hover #star-button  {
+  visibility: visible;
+  min-width: unset !important;
+}
 
+#page-action-buttons:hover #userContext-indicator {
+  margin-right : 0px !important;
+}
 
+/* Create page actions hover "button" */
+#page-action-buttons::after {
+  content: "•••";
+  position: absolute;
+  top: 0.7em;
+  font-size: 0.7em;
+  opacity: 0.5;
+  right: 8px;
+  transition: all 50ms ease-in-out;
+}
 
+/* Hide the button on hover */
+#page-action-buttons:hover::after {
+  display: none !important;
+  width: 0px !important;
+  margin-left: 0px !important;
+  transition: all 50ms ease-in-out;
+}
 
-
-
+/* Hide Buttons and Reveal on Hover Finished*/
+#urlbar,#searchbar {
+  font-size: 13px !important;
+	margin-top: 0px !important;
 
